# slt

./: .gitignore  .rusty-hook.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  about.toml  client-structure.md  deny.toml  flake.nix  protocol.md  server-structure.md  spec.txt  vendor-versions.toml
.github/about/: template.hbs
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
deploy/systemd/: README.md  slt-net.sh  slt-server.service  slt-setup.service
docs/: README.md
docs/architecture/: README.md  android-control-boundary.md  overview.md  traffic-classification.md  transport-security.md
docs/deployment/: README.md  client-setup.md  nginx-integration.md  nixos.md  server-setup.md
docs/examples/: client.toml  server.toml
docs/protocol/: README.md  connection-flow.md  key-update.md  messages.md  udp-qsp.md  wire-format.md
docs/reference/: README.md  config-schema.md  message-types.md
docs/user-guide/: README.md  configuration.md  installation.md  quick-start.md
nix/: devshells.nix  pkgs.nix
nix/modules/: default.nix  slt.nix
scripts/: chrome-quic.sh  chrome-tcp.sh  update-vendor.sh
slt-cli/: Cargo.toml
slt-cli/src/: add_client.rs  cert.rs  check_server.rs  client_config.rs  client_id.rs  config_io.rs  generate_certs.rs  generate_keys.rs  http_probe.rs  init.rs  list_clients.rs  main.rs  net.rs  remove_client.rs  show_client.rs  show_client_config.rs  show_server.rs  validate.rs
slt-cli/tests/: cli.rs
slt-client/: Cargo.toml  uniffi.toml
slt-client/src/: android.rs  android_logging.rs  app.rs  auth.rs  error.rs  lib.rs  main.rs  metrics.rs  quic.rs  runtime.rs  tcp.rs  test_integration.rs  tun.rs  wire.rs
slt-client/src/android/: config.rs  entrypoints.rs  event_sink.rs  mod.rs  session.rs  uniffi_api.rs
slt-client/src/error/tests/: conversions.rs  mod.rs  rendering.rs  retry_classification.rs  stage.rs
slt-client/src/runtime/: control.rs  limits.rs  mod.rs  observer.rs  register.rs  services.rs  session.rs  tun_tests.rs
slt-client/src/runtime/session/: driver.rs  error.rs  event.rs  lifecycle.rs  mod.rs  state.rs  tcp.rs  tests.rs  udp.rs  upgrade.rs
slt-client/src/runtime/session/error/tests/: conversions.rs  mod.rs  policy.rs  rendering.rs  udp_qsp.rs
slt-client/src/runtime/session/lifecycle/tests/: activity_accounting.rs  mod.rs  payloads.rs  shutdown_tun_delivery.rs  timers_keepalive.rs
slt-client/src/runtime/session/state/tests/: active_transport.rs  mod.rs  transitions.rs  udp_state_views.rs  upgrade_state.rs
slt-client/src/runtime/session/upgrade/tests/: mod.rs  payload_validation.rs  probe_ack.rs  registration.rs  retry_timeout.rs
slt-client/src/runtime/tests/: command_handling.rs  mod.rs  reconnect_backoff.rs  startup_config_validation.rs  underlying_network.rs
slt-client/src/test_support/: config.rs  crypto.rs  mod.rs  protocol.rs  server.rs  transport.rs
slt-client/src/transport/: host_resolver.rs  mod.rs  quic_discovery.rs  socket_protector.rs  tcp.rs  tls.rs  udp_qsp.rs
slt-client/src/transport/udp_qsp/tests/: mod.rs  peer_filtering.rs  real_sockets.rs  transport_policy.rs
slt-client/src/tun/: android.rs  desktop.rs  mod.rs
slt-core/: Cargo.toml
slt-core/src/: classifier.rs  lib.rs  packet.rs
slt-core/src/config/: client.rs  defaults.rs  mod.rs  server.rs  validate.rs
slt-core/src/config/server/tests/: mod.rs  redaction.rs  serde_defaults.rs  validation.rs
slt-core/src/crypto/: client_hello.rs  mod.rs
slt-core/src/crypto/udp_qsp/: keys.rs  mod.rs  packet.rs  pn.rs  session.rs
slt-core/src/crypto/udp_qsp/keys/: backend.rs  derivation.rs  mod.rs  schedule.rs  tests.rs
slt-core/src/crypto/udp_qsp/session/tests/: buffering.rs  key_update.rs  mod.rs  peer_update.rs  replay_window.rs  send_receive.rs
slt-core/src/proto/: admissibility.rs  auth.rs  framing.rs  message.rs  mod.rs  payloads.rs  types.rs
slt-core/src/proto/payloads/: auth.rs  control.rs  error.rs  mod.rs  registration.rs  upgrade.rs
slt-core/src/test_support/: client_hello.rs  mod.rs
slt-core/src/transport/: mod.rs  tcp.rs  tun.rs  udp_qsp_io.rs
slt-core/src/transport/udp_qsp_io/tests/: mod.rs  plain_io.rs  receive_behavior.rs  send_batching.rs  session_integration.rs
slt-core/src/types/: cid.rs  client_config.rs  client_id.rs  ed25519.rs  mod.rs  server_config.rs  shared_secret.rs  tls_material.rs  tun_config.rs
slt-core/src/types/serde/: hex.rs  secret.rs
slt-core/tests/: config_examples.rs
slt-server/: Cargo.toml
slt-server/src/: auth.rs  lib.rs  main.rs  metrics.rs  quic.rs  registry.rs  router.rs  tcp.rs  tun.rs  udp_qsp.rs
slt-server/src/auth/: authenticator.rs  error.rs  errors.rs  handler.rs  mod.rs  session_manager.rs  types.rs
slt-server/src/auth/tests/: authenticator_tests.rs  handler_flow_tests.rs  metrics_tests.rs  mod.rs
slt-server/src/quic/tests/: endpoint.rs  mod.rs  nat.rs  routing.rs  upstream_reader.rs
slt-server/src/server_runtime/: mod.rs  supervision.rs  tls.rs  tun_workers.rs
slt-server/src/sessions/: egress.rs  error.rs  lifecycle.rs  limits.rs  mod.rs  register.rs  tcp.rs  tests.rs  types.rs  udp.rs  udp_io.rs  upgrade.rs
slt-server/src/sessions/tests/: common.rs  flush.rs  lifecycle.rs  mod.rs  register.rs  tcp.rs  udp_errors.rs  udp_flow.rs  upgrade_regressions.rs
slt-server/src/tcp/: admission.rs  classification.rs  mod.rs  proxy.rs  stream_io.rs  tests.rs
slt-server/src/test_support/: auth.rs  mod.rs  tls.rs  tun.rs  udp.rs
slt-tools/: Cargo.toml
slt-tools/tests/: quic_client_hello.rs
src/: classifier.rs  client_hello.rs  crypto.rs  lib.rs  proto.rs
src/config/: client.rs  mod.rs  serde_hex.rs  serde_secret.rs  server.rs
src/crypto/: client_hello.rs  mod.rs  udp_qsp.rs
src/proto/: framing.rs  message.rs  mod.rs  payloads.rs  types.rs
src/server/: auth.rs  metrics.rs  mod.rs  quic.rs  registry.rs  router.rs  sessions.rs  tcp.rs  tls.rs  tun.rs  udp_qsp.rs
src/types/: cid.rs  client_id.rs  ed25519.rs  mod.rs  (+1 more)
vendor-patches/: README.md  boring-sys.patch  boring.patch  quiche.patch
(+128 files in other folders)
