[workspace]
members = ["slt-core", "slt-client", "slt-server", "slt-tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
boring = "5.0.0-alpha.2"
boring-sys = "5.0.0-alpha.2"
tokio-boring = "5.0.0-alpha.1"
brotli = "8.0.2"
clap = { version = "4.5.54", features = ["derive"] }
ed25519-dalek = "2.1.1"
foreign-types = "0.5.0"
fastrand = "2.3.0"
hex = "0.4.3"
humantime-serde = "1.1.1"
lru = "0.16.3"
parking_lot = "0.12.5"
quiche = { version = "0.24.8", features = ["boringssl-boring-crate"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.9.8"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_info"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tun-rs = { version = "2.7.8", features = ["async_tokio"] }
thiserror = "2.0"
anyhow = "1.0"

slt-core = { path = "slt-core" }

[patch.crates-io]
boring = { path = "vendor/boring" }
boring-sys = { path = "vendor/boring-sys" }
quiche = { path = "vendor/quiche" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
