[workspace]
members = ["slt-core", "slt-client", "slt-server", "slt-tools", "slt-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
brotli = "8.0"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.1"
foreign-types = "0.5"
fastrand = "2.3"
hex = "0.4"
humantime-serde = "1.1"
lru = "0.16"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tun-rs = { version = "2.7", features = ["async_tokio"] }
thiserror = "2.0"
anyhow = "1.0"
num_enum = "0.7"
rcgen = "0.13"
time = "0.3"

slt-core = { path = "slt-core" }

tokio-boring = "5.0.0"
# Vendored crates; keep exact versions aligned with vendor-versions.toml.
boring = "5.0.1"
boring-sys = "5.0.1"
quiche = { version = "0.25.0", features = ["boringssl-boring-crate"] }

[patch.crates-io]
boring = { path = "vendor/boring" }
boring-sys = { path = "vendor/boring-sys" }
quiche = { path = "vendor/quiche" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
