[workspace]
members = ["slt-core", "slt-client", "slt-server", "slt-tools", "slt-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
brotli = "8.0"
clap = { version = "4.6", features = ["derive"] }
ed25519-dalek = "2.2"
foreign-types = "0.5"
fastrand = "2.4"
hex = "0.4"
humantime-serde = "1.1"
libc = "0.2"
lru = "0.18"
parking_lot = "0.12"
quinn-udp = "0.6"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tun-rs = { version = "2.8", features = ["async_tokio"] }
uniffi = { version = "=0.32.0", default-features = false }
thiserror = "2.0"
anyhow = "1.0"
num_enum = "0.7"
rcgen = "0.14"
time = "0.3"
x509-parser = "0.18"

slt-core = { path = "slt-core" }

tokio-boring = "5.0.0"
# Vendored crates; keep exact versions aligned with vendor-versions.toml.
boring = "5.1.0"
boring-sys = "5.1.0"
quiche = { version = "0.29.2", features = ["boringssl-boring-crate"] }

[patch.crates-io]
boring = { path = "vendor/boring" }
boring-sys = { path = "vendor/boring-sys" }
quiche = { path = "vendor/quiche" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

[profile.release]
strip = "debuginfo"
