[package]
name = "slt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "slt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
slt-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
