[package]
name = "slt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "slt"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
boring = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
slt-core = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
x509-parser = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
