[package]
name = "slt-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
boring = { workspace = true }
clap = { workspace = true }
slt-core = { workspace = true }
tokio = { workspace = true }
tokio-boring = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tun-rs = { workspace = true }

[lints]
workspace = true
