[package]
name = "slt-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
boring = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
fastrand = { workspace = true }
quiche = { workspace = true }
slt-core = { workspace = true }
tokio = { workspace = true }
tokio-boring = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tun-rs = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
