[package]
name = "slt-client"
version.workspace = true
edition.workspace = true

[lib]
name = "slt_client"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
boring = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
fastrand = { workspace = true }
jni = { workspace = true }
libc = { workspace = true }
quiche = { workspace = true }
slt-core = { workspace = true, features = ["udp-io"] }
tokio = { workspace = true }
tokio-boring = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tun-rs = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
