[package]
name = "slt-core"
version.workspace = true
edition.workspace = true

[features]
default = []
## Exposes test support utilities for use in dependent crate tests.
testing = []
## Enables the Unix UDP-QSP socket backend with GRO/GSO support.
udp-io = ["dep:quinn-udp"]

[dependencies]
boring = { workspace = true }
boring-sys = { workspace = true }
brotli = { workspace = true }
ed25519-dalek = { workspace = true }
foreign-types = { workspace = true }
fastrand = { workspace = true }
hex = { workspace = true }
humantime-serde = { workspace = true }
parking_lot = { workspace = true }
quinn-udp = { workspace = true, optional = true }
quiche = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-boring = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
num_enum = { workspace = true }
tun-rs = { workspace = true }

[dev-dependencies]
[lints]
workspace = true
