[package]
name = "slt-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
boring = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
fastrand = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
slt-core = { workspace = true }
tokio = { workspace = true }
tokio-boring = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tun-rs = { workspace = true }

[lints]
workspace = true
