[package]
name = "slt-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "slt-server"
path = "src/main.rs"

[dependencies]
boring = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
fastrand = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
quinn-udp = { workspace = true }
slt-core = { workspace = true, features = ["udp-io"] }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-boring = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tun-rs = { workspace = true }

[dev-dependencies]
slt-core = { workspace = true, features = ["testing"] }

[lints]
workspace = true
